--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,9 @@
 # =========================
 # Stage 1: Build Angular
 # =========================
-FROM node:20-alpine AS build
+FROM node:22.16.0-alpine AS build
 
-WORKDIR /app
+WORKDIR /src
 
 # Copier package.json et package-lock.json pour installer dépendances
 COPY package*.json ./
@@ -20,13 +20,13 @@ RUN npm run build --configuration=production
 # =========================
 # Stage 2: Serve avec Nginx
 # =========================
-FROM nginx:alpine
+FROM nginx:stable AS final
 
 # Copier la configuration Nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copier les fichiers buildés depuis le stage 1
-COPY --from=build /app/dist/frontend/browser /usr/share/nginx/html
+COPY --from=build src/dist/frontend/browser /usr/share/nginx/html
 
 # Exposer le port HTTP
 EXPOSE 80
