--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,13 +47,13 @@ jobs:
       - name: Deploy to Azure VM
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.AZUR_VM_IP }}
-          username: ${{ secrets.AZUR_VM_USER }}
-          key: ${{ secrets.AZUR_VM_KEY }}
+          host: ${{ secrets.AZURE_VM_IP }}
+          username: ${{ secrets.AZURE_VM_USER }}
+          key: ${{ secrets.AZURE_VM_KEY }}
           script: |
             # Se placer dans le dossier de déploiement
-            mkdir -p /home/${{ secrets.AZUR_VM_USER }}/homepulse
-            cd /home/${{ secrets.AZUR_VM_USER }}/homepulse
+            mkdir -p /home/${{ secrets.AZURE_VM_USER }}/homepulse
+            cd /home/${{ secrets.AZURE_VM_USER }}/homepulse
 
             # Copier le docker-compose.yml depuis le repo
             cp -r $GITHUB_WORKSPACE/docker-compose.yml .
