--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 1. Copier le fichier docker-compose.yml vers le serveur
+      - name: Copy files to Azure VM
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.AZURE_VM_IP }}
+          username: ${{ secrets.AZURE_VM_USER }}
+          key: ${{ secrets.AZURE_VM_KEY }}
+          source: "docker-compose.yml"
+          target: "/home/${{ secrets.AZURE_VM_USER }}/homepulse"
+
+      # 2. Se connecter en SSH pour déployer
       - name: Deploy to Azure VM
         uses: appleboy/ssh-action@master
         with:
@@ -51,21 +62,14 @@ jobs:
           username: ${{ secrets.AZURE_VM_USER }}
           key: ${{ secrets.AZURE_VM_KEY }}
           script: |
-            # Se placer dans le dossier de déploiement
-            mkdir -p /home/${{ secrets.AZURE_VM_USER }}/homepulse
             cd /home/${{ secrets.AZURE_VM_USER }}/homepulse
-
-            # Copier le docker-compose.yml depuis le repo
-            cp -r $GITHUB_WORKSPACE/docker-compose.yml .
-
-            # Exporter les secrets MySQL
+            
+            # Exporter les secrets pour qu'ils soient accessibles par docker-compose
             export MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}
             export MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }}
             export MYSQL_USER=${{ secrets.MYSQL_USER }}
             export MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }}
 
-            # Pull latest images
+            # Pull et redémarrage
             docker-compose pull
-
-            # Lancer tous les conteneurs
             docker-compose up -d --remove-orphans
