--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,12 +5,12 @@ on:
     branches: [ "main", "master" ]
 
 jobs:
-  build-and-push:
+  # Job séparé pour le Backend
+  build-backend:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -29,6 +29,23 @@ jobs:
           push: true
           tags: ghcr.io/${{ github.repository }}/backend:latest
 
+  # Job séparé pour le Frontend
+  build-frontend:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build and push Frontend
         uses: docker/build-push-action@v5
         with:
@@ -36,25 +53,27 @@ jobs:
           push: true
           tags: ghcr.io/${{ github.repository }}/frontend:latest
 
+  # Déploiement (attend que les deux builds soient finis)
   deploy:
     runs-on: ubuntu-latest
-    needs: build-and-push
+    needs: [build-backend, build-frontend]
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 1. Copier le fichier docker-compose.yml vers le serveur
-      - name: Copy files to Azure VM
+      # Copier via SCP (Using the same key/port as SSH)
+      - name: Copy docker-compose to Azure VM
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.AZURE_VM_IP }}
           username: ${{ secrets.AZURE_VM_USER }}
-          key: ${{ secrets.AZURE_VM_KEY }}
+          port: ${{ secrets.AZURE_VM_SSH_PORT }}
+          key: ${{ secrets.AZURE_VM_SSH_KEY }}
           source: "docker-compose.yml"
           target: "/home/${{ secrets.AZURE_VM_USER }}/homepulse"
 
-      # 2. Se connecter en SSH pour déployer
+      # Déployer via SSH
       - name: Deploy to Azure VM
         uses: appleboy/ssh-action@master
         with:
@@ -65,7 +84,7 @@ jobs:
           script: |
             cd /home/${{ secrets.AZURE_VM_USER }}/homepulse
             
-            # Exporter les secrets pour qu'ils soient accessibles par docker-compose
+            # Variables d'environnement pour MySQL
             export MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}
             export MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }}
             export MYSQL_USER=${{ secrets.MYSQL_USER }}
