--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,11 @@ services:
     networks:
       - app-network
     healthcheck:
-      test: "mysqladmin ping -h localhost -u root -p$$MYSQL_ROOT_PASSWORD"
+      test: "mysqladmin ping -h localhost -u root -p\"$$MYSQL_ROOT_PASSWORD\""
       interval: 10s
       timeout: 10s
       retries: 5
-      start_period: 30s
+      start_period: 60s
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
