Deploy full stack package with Nginx Gateway

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,10 +53,34 @@ jobs:
           push: true
           tags: ghcr.io/${{ github.repository }}/frontend:latest
 
-  # Déploiement (attend que les deux builds soient finis)
+  # Job séparé pour le Gateway Nginx
+  build-gateway:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Gateway
+        uses: docker/build-push-action@v5
+        with:
+          context: ./nginx
+          push: true
+          tags: ghcr.io/${{ github.repository }}/gateway:latest
+
+  # Déploiement (attend que les trois builds soient finis)
   deploy-to-azure-vm:
     runs-on: ubuntu-latest
-    needs: [build-backend, build-frontend]
+    needs: [build-backend, build-frontend, build-gateway]
 
     steps:
       - name: Checkout repository
