--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,8 +19,7 @@ http {
         listen 443 ssl;
         server_name localhost;
 
-        # Self-signed certs for initial setup. 
-        # In production, mount real certs via volume.
+        # Self-signed certs generated in Dockerfile
         ssl_certificate /etc/nginx/certs/fullchain.pem;
         ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
@@ -47,8 +46,8 @@ http {
         }
 
         # Wildfly Management Console (Optional, secure in prod)
-        # location /management/ {
-        #     proxy_pass http://backend:9990/;
-        # }
+        location /management/ {
+            proxy_pass http://backend:9990/;
+        }
     }
 }
