Deploy full stack package with Nginx Gateway

--- a/nginx/proxy.conf
+++ b/nginx/proxy.conf
@@ -1,32 +1,52 @@
+user nginx;
+worker_processes auto;
+
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
+
 events {
     worker_connections 1024;
 }
 
 http {
-    include       mime.types;
+    include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
-    
-     limiting for API
-    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;# Simple rate
 
+    sendfile on;
+    keepalive_timeout 65;
+    server_tokens off;
+
+    # Rate limit API
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+
+    # ============================
+    # REDIRECTION HTTP -> HTTPS
+    # ============================
     server {
         listen 80;
         server_name _;
+
+        # Laisser /pma en HTTP OU rediriger tout le monde vers HTTPS
         return 301 https://$host$request_uri;
     }
 
+    # ============================
+    # SERVEUR HTTPS PRINCIPAL
+    # ============================
     server {
         listen 443 ssl;
         server_name _;
 
-        # Self-signed certs generated in Dockerfile
+        # Certificats Let's Encrypt ou Self-signed
         ssl_certificate /etc/nginx/certs/fullchain.pem;
         ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        # Frontend
+        # ---------------------------
+        # FRONTEND ANGULAR
+        # ---------------------------
         location / {
             proxy_pass http://frontend:80;
             proxy_set_header Host $host;
@@ -35,7 +55,9 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Backend API
+        # ---------------------------
+        # BACKEND API (JAKARTA REST)
+        # ---------------------------
         location /api/ {
             limit_req zone=api_limit burst=20 nodelay;
             proxy_pass http://backend:8080/api/;
@@ -44,11 +66,17 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-        # phpMyAdmin on /pma
+
+        # ---------------------------
+        # phpMyAdmin
+        # ---------------------------
         location /pma/ {
             proxy_pass http://phpmyadmin:80/;
         }
-        # Wildfly Management Console (Optional, secure in prod)
+
+        # ---------------------------
+        # Wildfly management (à désactiver en prod)
+        # ---------------------------
         location /management/ {
             proxy_pass http://backend:9990/;
         }
